fix: footer items don't compress on mobile

--- a/src/styles/footer.pcss
+++ b/src/styles/footer.pcss
@@ -24,10 +24,13 @@ footer {
   }
 
   ul {
-    width: 40%;
     list-style-type: none;
     padding: 0;
     margin: 0;
+
+    @media (min-width: 768px) {
+      width: 40%;
+    }
   }
 
   li {
